AD-2004-04-30-1: Bugfix:    Did fix build.
                 Changed:   qmaster

DT-2004-04-30-0: Bugfix:    o drmaa_control(DRMAA_CONTROL_TERMINATE) now
                              behaves like qmon when deleting
                            o Brought test_drmaa in sync with drmaa.c
                            - test_drmaa still fails the DRMAA_V_ENV test in
                              ST_ATTRIBUTE_CHECK.
                 Changed:   DRMAA
                 Issue:     979

AD-2004-04-30-0: Cleanup:   Did move 'get_local_conf_val()'.
                 Changed:   qmaster

JG-2004-04-30-1: Testsuite: verified test functional/access_lists
                            fixed test system_tests/clients/qmod/auto_reschedule

JG-2004-04-30-0: Bugfix:    qconf -sconf had problems with short vs. long 
                            hostnames and hostname resolution.
                            qmaster did no hostname resolving for cluster config
                            objects.
                            deleting config or host objects that had a long 
                            hostname by specifying the short hostname and vice 
                            versa failed.
                            Fixed a qmaster core dump.
                 Changed:   sge_qmaster, qconf
                 Issue:     1007, 1009
                 Review:    SG

CR-2004-04-29-2: Enhancm.:  - removed unused structure element in 
                              cl_com_hostent_t structure
                            - added new functions:
                              cl_com_copy_in_addr();
                              cl_com_copy_hostent();
                              cl_host_list_copy();
                 Changed:   communication
                 Review:    SG

SG-2004-04-29-1: Bugfix:    changed the locking in the com. connection list
                 Changed:   communication
                 Review:    CR

SG-2004-04-29-0: Bugfix:    the event master would only deliver a limited