@@ -115,6 +115,7 @@ main(int argc, char** argv)
         printf("***********************************************************\n");
         arg++;
      }
+     sleep(1); 
   }
   
   
